<fix> panel overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,8 +5,8 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    scrollbar-width: none;            /* can be auto | thin | none */
-    scrollbar-color: #888 #f1f1f1;    /* thumb color | track color */
+    scrollbar-width:1px;            /* can be auto | thin | none */
+    scrollbar-color: #1f232d #1f232d;    /* thumb color | track color */
 }
 
 :root {
@@ -128,6 +128,8 @@ body {
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    background: #1f232d;
 }
 
 .chart-container {
